<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.sweintritt</groupId>
    <artifactId>jmus</artifactId>
    <version>0.2.0</version>

    <description>
        Simple audio player to play your local library on shuffle.
    </description>

    <url>https://github.com/sweintritt/jmus</url>

    <licenses>
        <license>
            <name>MIT License</name>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>sweintritt</id>
            <name>Stephan Weintritt</name>
            <email>45856463+sweintritt@users.noreply.github.com</email>
            <url>https://github.com/sweintritt</url>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <main.class>com.github.sweintritt.jmus.Main</main.class>

        <!-- Library versions -->
        <version.commons.io>2.21.0</version.commons.io>
        <version.commons-lang>3.20.0</version.commons-lang>
        <version.lombok>1.18.44</version.lombok>
        <version.slf4j>2.0.17</version.slf4j>
        <version.log4j>2.25.4</version.log4j>
        <version.jna>5.18.1</version.jna>
        <version.assertj>3.27.7</version.assertj>
        <version.mockito>5.23.0</version.mockito>
        <version.junit>6.0.3</version.junit>
        <version.jline>4.0.9</version.jline>
        <version.vlcj>4.12.1</version.vlcj>

        <!-- Maven plugins - https://maven.apache.org/plugins -->
        <version.compiler.plugin>3.15.0</version.compiler.plugin>
        <version.rpm.plugin>2.3.0</version.rpm.plugin>
        <version.dependency.plugin>3.10.0</version.dependency.plugin>
        <version.jar.plugin>3.5.0</version.jar.plugin>
    </properties>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
            <scope>provided</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${version.commons.io}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${version.commons-lang}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${version.slf4j}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${version.log4j}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${version.log4j}</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/org.jline/jline -->
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>${version.jline}</version>
        </dependency>
        <!-- Source: https://mvnrepository.com/artifact/uk.co.caprica/vlcj -->
        <dependency>
            <groupId>uk.co.caprica</groupId>
            <artifactId>vlcj</artifactId>
            <version>${version.vlcj}</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${version.assertj}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${version.mockito}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>*</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.compiler.plugin}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${version.lombok}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${version.jar.plugin}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${main.class}</mainClass>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${version.dependency.plugin}</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>rpm-maven-plugin</artifactId>
                <version>${version.rpm.plugin}</version>
                <executions>
                    <execution>
                        <id>generate-rpm</id>
                        <phase>package</phase>
                        <goals>
                            <goal>rpm</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <name>${project.name}</name>
                    <group>Applications/Multimedia</group>
                    <version>${project.version}</version>
                    <summary>${project.description}</summary>
                    <url>https://github.com/sweintritt/jmus/</url>
                    <license>MIT</license>
                    <requires>
                        <require>java-21-openjdk</require>
                        <require>vlc-libs &gt; 3.0.0</require>
                    </requires>
                    <mappings>
                        <mapping>
                            <directory>/opt/${project.name}/lib</directory>
                            <filemode>755</filemode>
                            <sources>
                                <source>
                                    <location>target/${project.name}-${project.version}.jar</location>
                                    <destination>${project.name}.jar</destination>
                                </source>
                            </sources>
                        </mapping>
                        <mapping>
                            <directory>/opt/${project.name}/lib</directory>
                            <filemode>644</filemode>
                            <sources>
                                <source>
                                    <location>target/lib</location>
                                </source>
                            </sources>
                        </mapping>
                        <mapping>
                            <directory>/usr/local/bin</directory>
                            <filemode>755</filemode>
                            <sources>
                                <source>
                                    <location>src/scripts/jmus</location>
                                </source>
                            </sources>
                        </mapping>
                    </mappings>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
